--- a/user_app/templates/index.html
+++ b/user_app/templates/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}?{% now 'U' %}">
-    <title>home</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
-</body>
-</html>
+{% extends 'main.html' %}
+{% block content %}
+<div class="container">
+    <div class="d-flex align-items-center justify-content-between">
+        <h1>Add a Show</h1>
+        <a href="{% url  'allShows'%}">View Shows</a>
+    </div>
+    <div class="form-group mt-5">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form }}
+            <button class="btn btn-secondary mt-3" type="submit">Create</button>
+        </form>
+    </div>
+</div>
+
+
+
+{% endblock %}
