--- a/user_app/templates/shows.html
+++ b/user_app/templates/shows.html
@@ -17,10 +17,10 @@
             <tbody>
                 {% for show in shows %}
                 <tr>
-                    <td>{{show.title}}</td>
+                    <td><a href="/shows/{{show.id}}">{{show.title}}</a></td>
                     <td>{{show.network}}</td>
                     <td>{{show.release_date}}</td>
-                    <td><a href="">Edit</a> <a href="">Delete</a></td>
+                    <td><a href="/shows/{{show.id}}/edit">Edit</a> <a href="">Delete</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
