--- a/user_app/templates/view.html
+++ b/user_app/templates/view.html
@@ -8,5 +8,6 @@
     <strong>Network: </strong><p>{{show.network}}</p>
     <strong>Release date: </strong><p>{{show.release_date}}</p>
     <strong>Description: </strong><p>{{show.description}}</p>
+    <a href="/shows/{{show.id}}/edit">Edit</a>
 </div>
 {% endblock %}
