--- a/user_app/templates/edit.html
+++ b/user_app/templates/edit.html
@@ -1,9 +1,13 @@
 {% extends 'main.html' %}
 {% block content %}
-<div class="container">
+<div class="container mt-5">
     <div class="d-flex align-items-center justify-content-between">
         <h1>Edit a Show</h1>
-        <a href="{% url  'allShows'%}">View Shows</a>
+        <div>
+            <strong>{{request.user}}</strong>
+            <a href="{% url  'allShows'%}">View Shows</a>
+        </div>
+        
     </div>
     <div class="form-group mt-5">
         <form method="POST">
