--- a/user_app/templates/register.html
+++ b/user_app/templates/register.html
@@ -1,13 +1,17 @@
 {% extends 'main.html' %}
 {% block content  %}
-<div class="container">
+<div class="container mt-5">
     <h1>Register</h1>
     <div class="form-group">
-        <form method="POST">
+        <form method="POST" action="">
             {% csrf_token %}
             {{ form.username.label_tag}}
             {{ form.username }}
             {{ form.username.errors }}
+
+            {{ form.email.label_tag }}
+            {{ form.email }}
+            {{ form.email.errors }}
 
             {{ form.password1.label_tag}}
             {{ form.password1 }}
