--- a/user_app/templates/shows.html
+++ b/user_app/templates/shows.html
@@ -4,7 +4,11 @@
 <div class="container mt-5">
     <div class="d-flex align-items-center justify-content-between">
         <h1>All of the Shows</h1>
-        <a href="{% url  'home'%}">Add a Show</a>
+        <div>
+            <strong>{{request.user}}</strong>
+            <a href="{% url  'home'%}">Add a Show</a>
+        </div>
+        
     </div>
     
     <table class="table table-secondary">
