--- a/user_app/templates/view.html
+++ b/user_app/templates/view.html
@@ -3,7 +3,11 @@
 <div class="container mt-5">
     <div class="d-flex align-items-center justify-content-between">
         <h1>{{show.title}}</h1>
-        <a href="{% url  'allShows'%}">View Shows</a>
+        <div>
+            <strong>{{request.user}}</strong>
+            <a href="{% url  'allShows'%}">View Shows</a>
+        </div>
+        
     </div>
     <strong>Network: </strong><p>{{show.network}}</p>
     <strong>Release date: </strong><p>{{show.release_date}}</p>
