--- a/user_app/templates/shows.html
+++ b/user_app/templates/shows.html
@@ -6,7 +6,8 @@
         <h1>All of the Shows</h1>
         <div>
             <strong>{{request.user}}</strong>
-            <a href="{% url  'home'%}">Add a Show</a>
+            <a href="{% url 'logoutUser' %}">logout</a>
+            
         </div>
         
     </div>
@@ -29,5 +30,6 @@
                 {% endfor %}
             </tbody>
         </table>
+        <a href="{% url  'home'%}">Add a Show</a>
 </div>
 {% endblock %}
