--- a/user_app/templates/login.html
+++ b/user_app/templates/login.html
@@ -2,7 +2,10 @@
 {% block content %}
 
 <div class="container mt-5">
-    <h1>Login</h1>
+    <div class="d-flex align-items-center justify-content-between">
+        <h1>Login</h1>
+        <a href="{% url 'registerUser' %}">Register</a>
+    </div>
     <div class="form-group">
         <form action="" method="POST">
             {% for message in messages %}
@@ -14,7 +17,6 @@
             <label class="from-label" for="password">Password:</label>
             <input class="form-control" type="password" name="password" id="password">
             <button class="btn btn-secondary mt-3" type="submit">Login</button>
-            
         </form>
     </div>
 </div>
