--- a/user_app/templates/register.html
+++ b/user_app/templates/register.html
@@ -1,7 +1,10 @@
 {% extends 'main.html' %}
 {% block content  %}
 <div class="container mt-5">
-    <h1>Register</h1>
+    <div class="d-flex align-items-center justify-content-between">
+        <h1>Register</h1>
+        <a href="{% url 'loginUser' %}">Login</a>
+    </div>
     <div class="form-group">
         <form method="POST" action="">
             {% csrf_token %}
