--- a/user_app/templates/shows.html
+++ b/user_app/templates/shows.html
@@ -6,12 +6,9 @@
         <h1>All of the Shows</h1>
         <div>
             <strong>{{request.user}}</strong>
-            <a href="{% url 'logoutUser' %}">logout</a>
-            
-        </div>
-        
+            <a href="{% url 'logoutUser' %}">logout</a> 
+        </div>     
     </div>
-    
     <table class="table table-secondary">
         <thead>
             <th>Title</th>
@@ -25,7 +22,11 @@
                     <td><a href="/shows/{{show.id}}">{{show.title}}</a></td>
                     <td>{{show.network}}</td>
                     <td>{{show.release_date}}</td>
-                    <td><a href="/shows/{{show.id}}/edit">Edit</a> <a href="/shows/{{show.id}}/delete">Delete</a></td>
+                    {% if request.user == show.user %}
+                        <td><a href="/shows/{{show.id}}/edit">Edit</a> <a href="/shows/{{show.id}}/delete">Delete</a></td>
+                    {% else %}
+                        <td></td>
+                    {% endif %}
                 </tr>
                 {% endfor %}
             </tbody>
