--- a/user_app/templates/index.html
+++ b/user_app/templates/index.html
@@ -4,7 +4,7 @@
     <div class="d-flex align-items-center justify-content-between">
         <h1>Add a Show</h1>
         <div>
-            <strong>{{request.user}}</strong>
+            <strong><a href="/user/{{request.user.id}}">{{request.user}}</a></strong>
             <a href="{% url  'allShows'%}">View Shows</a>
         </div>
     </div>
