--- a/user_app/templates/shows.html
+++ b/user_app/templates/shows.html
@@ -5,7 +5,7 @@
     <div class="d-flex align-items-center justify-content-between">
         <h1>All of the Shows</h1>
         <div>
-            <strong>{{request.user}}</strong>
+            <strong><a href="/user/{{request.user.id}}">{{request.user}}</a></strong>
             <a href="{% url 'logoutUser' %}">logout</a> 
         </div>     
     </div>
