--- a/user_app/templates/view.html
+++ b/user_app/templates/view.html
@@ -11,6 +11,7 @@
     <strong>Network: </strong><p>{{show.network}}</p>
     <strong>Release date: </strong><p>{{show.release_date}}</p>
     <strong>Description: </strong><p>{{show.description}}</p>
+    <strong>Likes: </strong><p>{{show.like.count}}</p>
     <strong>Added by: </strong><p>{{show.user}}</p>
     <a href="/shows/{{show.id}}/edit">Edit</a>
 </div>
