--- a/user_app/templates/user.html
+++ b/user_app/templates/user.html
@@ -11,7 +11,7 @@
         </div>
         <ul class="list-group list-group-flush" >
             {% for show in shows %}
-                <li class="list-group-item" >{{show.title}}</li>
+                <li class="list-group-item" ><a href="{% url 'viewShow' show.id %}">{{show.title}}</a></li>
             {% endfor %}
         </ul>
     </div>
