--- a/user_app/templates/user.html
+++ b/user_app/templates/user.html
@@ -15,6 +15,7 @@
             {% endfor %}
         </ul>
     </div>
+    <a href="{% url 'updateUser' user.id %}">Update Profile</a>
 </div>
-    
+
 {% endblock %}
