profile pic update

--- a/user_app/templates/user.html
+++ b/user_app/templates/user.html
@@ -5,7 +5,7 @@
         <h1>
             Hello {{user}}
             {% if profile.profile_image %}
-                <img src="{{user.profile.profile_image.url}}"  alt="profile image">
+                <img src="{{user.profile.profile_image.url}}"  alt="profile image" height="35">
             {% endif %}
         </h1>
         
