--- a/user_app/static/css/styles.css
+++ b/user_app/static/css/styles.css
@@ -5,3 +5,74 @@
     'GRAD' 0,
     'opsz' 24
 }
+
+body {
+    background-color: #f4f4f4;
+    font-family: Arial, sans-serif;
+}
+
+.navbar {
+    background-color: #38a9ca;
+}
+
+.jumbotron {
+    background-color: #4178a3;
+    color: #ffffff;
+    padding: 100px 20px;
+    margin-bottom: 0;
+}
+
+.main-container {
+    width: 100%;
+    padding: 0%;
+}
+
+.card-width{
+    width: 25%;
+}
+
+.card {
+    background-color: #3da6a9;
+    color: #ffffff;
+    width: 98%;
+    transition: transform 0.3s ease-in-out;
+}
+
+.card:hover {
+    transform: scale(1.01);
+}
+
+.card-title {
+    color: #ffffff;
+}
+.login-container {
+    max-width: 400px;
+    margin: 100px auto;
+    padding: 40px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+}
+
+.form-group label {
+    font-weight: bold;
+}
+
+.form-control {
+    border-color: #3da6a9;
+}
+
+.form-control:focus {
+    box-shadow: 0 0 5px rgba(61, 166, 169, 0.5);
+    border-color: #38a9ca;
+}
+
+.btn-login {
+    background-color: #4178a3;
+    border-color: #4178a3;
+}
+
+.btn-login:hover {
+    background-color: #3da6a9;
+    border-color: #3da6a9;
+}
