--- a/user_app/templates/edit.html
+++ b/user_app/templates/edit.html
@@ -1,19 +1,46 @@
 {% extends 'main.html' %}
 {% block content %}
-<div class="container mt-5">
-    <div class="d-flex align-items-center justify-content-between">
-        <h1>Edit a Show</h1>
-        <div>
-            <strong>{{request.user}}</strong>
-            <a href="{% url  'allShows'%}">View Shows</a>
-        </div>   
-    </div>
-    <div class="form-group mt-5">
-        <form method="POST">
-            {% csrf_token %}
-            {{form}}
-            <button class="btn btn-secondary mt-3" type="submit">Edit</button>
-        </form>
+{% include 'navbar.html' %}
+{% include 'hero.html' %}
+<div class="container mt-4 mb-4">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <div class="d-flex">
+                        <div class="form-group form-width">
+                            <form method="POST" action="#" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                {{ form.title.label_tag }}
+                                {{ form.title }}
+                                {{ form.title.errors }}
+                        
+                                {{ form.network.label_tag }}
+                                {{ form.network }}
+                                {{ form.network.errors }}
+                        
+                                {{ form.release_date.label_tag}}
+                                {{ form.release_date }}
+                                {{ form.release_date.errors }}
+                        
+                                {{ form.description.label_tag }}
+                                {{ form.description }}
+                                {{ form.description.errors }}
+
+                                
+                                <div class="mt-2">
+                                    {{ form.show_image.label_tag}}
+                                    {{ form.show_image }}
+                                    {{ form.show_image.errors }}
+                                </div>
+                                <button class="btn btn-secondary mt-4" id="btn-width" type="submit">Update</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+                        
 {% endblock %}
