--- a/user_app/templates/index.html
+++ b/user_app/templates/index.html
@@ -1,35 +1,47 @@
 {% extends 'main.html' %}
 {% block content %}
-<div class="container mt-5">
-    {% include 'navbar.html' %}
-    {% include 'hero.html' %}
-    <div class="form-group mt-5">
-        <form method="POST" action="" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.title.label_tag }}
-            {{ form.title }}
-            {{ form.title.errors }}
-
-            {{ form.network.label_tag }}
-            {{ form.network }}
-            {{ form.network.errors }}
-
-            {{ form.release_date.label_tag}}
-            {{ form.release_date }}
-            {{ form.release_date.errors }}
-
-            {{ form.description.label_tag }}
-            {{ form.description }}
-            {{ form.description.errors }}
-
-            {{ form.show_image.label_tag}}
-            {{ form.show_image }}
-            {{ form.show_image.errors }}
-            
-            <button class="btn btn-secondary mt-3" type="submit">Create</button>
-        </form>
+{% include 'navbar.html' %}
+{% include 'hero.html' %}
+<div class="container mt-4 mb-4">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <div class="d-flex">
+                        <div class="form-group form-width">
+                            <form method="POST" action="#" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                {{ form.title.label_tag }}
+                                {{ form.title }}
+                                {{ form.title.errors }}
+                        
+                                {{ form.network.label_tag }}
+                                {{ form.network }}
+                                {{ form.network.errors }}
+                        
+                                {{ form.release_date.label_tag}}
+                                {{ form.release_date }}
+                                {{ form.release_date.errors }}
+                        
+                                {{ form.description.label_tag }}
+                                {{ form.description }}
+                                {{ form.description.errors }}
+                                <div class="d-flex flex-column">
+                                    {{ form.show_image.label_tag}}
+                                    {{ form.show_image }}
+                                    {{ form.show_image.errors }}
+                                    <button class="btn btn-secondary mt-3" type="submit">Create</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+
 
 
 
