user page styles

--- a/user_app/templates/navbar.html
+++ b/user_app/templates/navbar.html
@@ -6,6 +6,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
+            {% if profile.profile_image %}
+                <li class="nav-item">
+                    <img class="rounded-circle" src="{{user.profile.profile_image.url}}"  alt="profile image" height="35">
+                </li>
+                
+            {% endif %}
             <li class="nav-item active">
                 <a class="nav-link" href="/user/{{request.user.id}}">{{request.user}}</a>
             </li>
