js image attempt

--- a/user_app/templates/shows.html
+++ b/user_app/templates/shows.html
@@ -1,64 +1,35 @@
 {% extends "main.html" %}
 {% block content %}
-
+{% load static %}
 {% include 'navbar.html' %}
 {% include 'hero.html' %}
 
 {% for show in shows %}
-<div class="container mt-4 mb-4">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="card mb-4 ">
-                {% if show.show_image %}
-                    <a href="{% url 'viewShow' show.id %}"><img src="{{show.show_image.url}}" class="card-img" alt="show image"></a>
-                {% endif %}
-                <div class="card-body">
-                    <div class="d-flex">
-                        <form action="{% url 'likeShow' show.id %}" method="POST" class="like-form">
-                            {% csrf_token %}
-                            <input type="hidden" name="show_id" value="{{ show.id }}">
-                            <input type="image" src="/static/images/favorite.png" class="like-btn" data-show-id="{{ show.id }}">
-                        </form>
-                        {{ show.like.count }}
-                        <!-- <form action="{% url 'likeShow' show.id %}" method="POST">
-                            {% csrf_token %}
-                            <input type="image" src="/static/images/favorite.png">
-                        </form> -->
-                        {% if request.user == show.user %}
-                           <span><a class="margin-left" href="/shows/{{show.id}}/edit"><img src="/static/images/edit.png" alt=""></a></span>  
-                            <a href="/shows/{{show.id}}/delete"><img src="/static/images/delete.png" alt=""></a>
-                        {% endif %}
+    <div class="container mt-4 mb-4">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card mb-4 ">
+                    {% if show.show_image %}
+                        <a href="{% url 'viewShow' show.id %}"><img src="{{show.show_image.url}}" class="card-img" alt="show image"></a>
+                    {% endif %}
+                    <div class="card-body">
+                        <div class="d-flex">
+                            <form class="like-form" action="{% url 'likeShow' show.id %}" method="POST">
+                                {% csrf_token %}
+                                <input id="emptyHeart_{{ show.id }}" class="like-button" onclick="changeImage('emptyHeart_{{ show.id }}')" type="image" src="/static/images/favorite.png">
+                            </form> 
+                            {{ show.like.count }}
+                            {% if request.user == show.user %}
+                            <span><a class="margin-left" href="/shows/{{show.id}}/edit"><img src="/static/images/edit.png" alt=""></a></span>  
+                                <a href="/shows/{{show.id}}/delete"><img src="/static/images/delete.png" alt=""></a>
+                            {% endif %}
+                        </div>
+                        <a href="{% url 'viewShow' show.id %}"><h5 class="card-title">{{show.title}}</h5></a>
+                        <p class="card-text">{{show.description}}</p>    
                     </div>
-                    <a href="{% url 'viewShow' show.id %}"><h5 class="card-title">{{show.title}}</h5></a>
-                    <p class="card-text">{{show.description}}</p>    
                 </div>
             </div>
         </div>
-    </div>
-</div>           
+    </div>           
 {%  endfor %}   
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>
-    $(document).ready(function() {
-        $('.like-btn').on('click', function(e) {
-            e.preventDefault();
-            const showId = $(this).data('show-id');
-            const form = $(this).closest('.like-form');
-
-            $.ajax({
-                type: 'POST',
-                url: form.attr('action'),
-                data: form.serialize(),
-                success: function(response) {
-                    // Update UI to show that the post is liked
-                    $(`.like-btn[data-show-id='${showId}']`).attr('src', '/static/images/liked.png');
-                    // You might want to update the count or perform other UI changes here.
-                },
-                error: function(error) {
-                    console.log(error);
-                }
-            });
-        });
-    });
-</script>
 {% endblock %}
