--- a/user_app/static/css/styles.css
+++ b/user_app/static/css/styles.css
@@ -84,3 +84,8 @@ span, .margin-left{
     background-color: #3da6a9;
     border-color: #3da6a9;
 }
+
+.like-button{
+    background-color:#3da6a9 ;
+    border: none;
+}
